plugins {
	id 'net.fabricmc.fabric-loom' version '1.17.17'
	id 'maven-publish'
}

base {
	archivesName = project.archives_base_name
}
version = project.mod_version
group = project.maven_group

java {
	toolchain { languageVersion = JavaLanguageVersion.of(25) }
	withSourcesJar()
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

repositories {
	maven { url "https://maven.terraformersmc.com/releases" }
	maven { url "https://api.modrinth.com/maven" }
	maven { url "https://maven.nucleoid.xyz" }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

	// Loom 1.17 on 26.x has no modImplementation and performs no remapping.
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	implementation include("maven.modrinth:midnightlib:${midnightlib_version}")

	implementation "eu.pb4:polymer-core:${polymer_version}"
	implementation "eu.pb4:polymer-blocks:${polymer_version}"
	implementation "eu.pb4:polymer-resource-pack:${polymer_version}"
	implementation "eu.pb4:polymer-resource-pack-extras:${polymer_version}"
	implementation "eu.pb4:polymer-virtual-entity:${polymer_version}"
	implementation "eu.pb4:polymer-autohost:${polymer_version}"
	implementation "eu.pb4:factorytools:${factorytools_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 25
	// Show every error, not just the first 100, so the package-by-package
	// migration gates see the true error count.
	it.options.compilerArgs << "-Xmaxerrs" << "10000"
}

jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName.get()}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			artifact(jar)
			artifact(sourcesJar)
		}
	}
	repositories {
	}
}
